fix: only apply z-index magic on mobile

--- a/components/GlobalHeader/GlobalHeader.scss
+++ b/components/GlobalHeader/GlobalHeader.scss
@@ -46,7 +46,10 @@
         background: var(--background-color, rgba(255, 255, 255, 1));
         transition: border-bottom 0.4s ease, transform 0.4s ease, background-color 0.4s ease;
         border-bottom: 1px solid rgba(231, 232, 233, 0);
-        z-index: 3;
+
+        @media (max-width: 850px) {
+            z-index: 3;
+        }
 
         @at-root [data-show-border="true"]#{&} {
             background: rgba(255, 255, 255, 1);
